objects/ShippingMode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Shipping Mode</description>
    <fields>
        <fullName>Express__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Express</description>
        <inlineHelpText>Express</inlineHelpText>
        <label>Express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationCode__c</fullName>
        <description>Location Code</description>
        <inlineHelpText>Codigo de Localidad</inlineHelpText>
        <label>Location Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Codigo Postal</inlineHelpText>
        <label>Postal Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Standard</description>
        <inlineHelpText>Standard</inlineHelpText>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <description>State Code</description>
        <inlineHelpText>Codigo de Provincia</inlineHelpText>
        <label>StateCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>Shipping Mode</label>
</CustomObject>